--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@nuxt/ui": "^2.18.4",
+    "@tresjs/cientos": "^4.0.2",
     "@tresjs/nuxt": "^3.0.7",
     "nuxt": "^3.13.0",
     "three": "^0.168.0",
